# foobos

./: .qemu.sh.un~  Cargo.toml  Makefile  README.md  aarch64-unknown-uefi.json  qemu-aarch64.sh  qemu-riscv64.sh  qemu-x86.sh  qemu-x86_64.sh  qemu.sh  riscv64-unknown-uefi.json  x86_64-unknown-uefi.json
.cargo/: .config.toml.un~  aarch64-unknown-uefi.json  config.toml
bootloader/: Cargo.toml
bootloader/src/: acpi.rs  core_requirements.rs  efi.rs  main.rs  mm.rs  print.rs  serial.rs
bootloader/src/mm/: physmem.rs
disabled_old_shared/ovmf-x64/: OVMF-need-smm.fd  OVMF-with-csm.fd  OVMF_CODE-need-smm.fd  OVMF_CODE-pure-efi.fd
ovmf-x64/: OVMF-pure-efi.fd  OVMF_CODE-with-csm.fd  UefiShell.iso
shared/generic_access_structure/: Cargo.toml
shared/generic_access_structure/src/: lib.rs
shared/rangeset/: Cargo.toml
shared/rangeset/src/: lib.rs
shared/serial/: Cargo.toml
shared/serial/src/: lib.rs
src/: .core_requirements.rs.un~  .efi.rs.swp  .efi.rs.un~  .main.rs.swp  .main.rs.un~  .print.rs.un~  acpi.rs  core_requirements.rs  efi.rs  main.rs  mm.rs  print.rs  rangeset.rs  serial.rs
src/mm/: mod.rs  physmem.rs  rangeset.rs
