[package]
name = "foobos"
version = "0.1.0"
authors = ["cttsrk <cttsrk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rangeset = { path = "../shared/rangeset" }
generic_access_structure = { path = "../shared/generic_access_structure" }

